# joanie

./: .dockerignore  .gitignore  .gitlint  CHANGELOG.md  Dockerfile  Makefile  README.md  UPGRADE.md  arnold.yml  docker-compose.yml  renovate.json
src/backend/: .pylintrc  MANIFEST.in  manage.py  pyproject.toml  setup.cfg  setup.py
src/backend/joanie/: admin_urls.py  api.py  celery_app.py  client_urls.py  remote_endpoints_urls.py  serializers.py  settings.py  urls.py  wsgi.py
src/backend/joanie/badges/: admin.py  apps.py  exceptions.py  factories.py  models.py  views.py
src/backend/joanie/badges/migrations/: 0001_initial.py
src/backend/joanie/badges/providers/: base.py  obf.py
src/backend/joanie/core/: admin.py  api.py  apps.py  authentication.py  enums.py  errors.py  exceptions.py  factories.py  filters.py  forms.py  helpers.py  middleware.py  models.py  pagination.py  permissions.py  schema.py  serializers.py  signals.py  storages.py  tasks.py  utils.py  views.py  viewsets.py
src/backend/joanie/core/api/: __init__.py  admin.py  base.py  client.py  remote_endpoints.py
src/backend/joanie/core/context_processors/: admin.py  contract_definition.py
src/backend/joanie/core/fields/: multiselect.py  schedule.py
src/backend/joanie/core/filters/: __init__.py  admin.py  base.py  client.py
src/backend/joanie/core/flows/: __init__.py  batch_order.py  order.py
src/backend/joanie/core/migrations/: 0001_initial.py  0002_add_organization_accesses.py  0002_address.py  0002_auto_20210301_1530.py  0002_auto_20210604_2357.py  0002_courserun_is_gradable.py  0002_coursewish.py  0002_remove_organization_representative_and_more.py  0003_add_course_accesses.py  0003_address_main.py  0003_alter_courserun_is_listed_notification.py  0003_auto_20210607_0938.py  0003_remove_course_lead_teacher_remove_user_is_teacher_and_more.py  0003_remove_enrollment_order_enrollment_orders.py  0004_course_cover_alter_organization_logo.py  0004_creditcard_order.py  0004_order_invoice_ref.py  0004_rename_action_type_notification_notif_type_and_more.py  0005_add_max_enrollment.py  0005_alter_product_price.py  0005_courseproductrelation_add_max_validated_orders.py  0005_notification_action_alter_notification_notif_type.py  0006_add_coursewish.py  0006_alter_certificatedefinition_options_and_more.py  0007_remove_order_total_currency_and_more.py  0008_certificate_enrollment_certificate_organization_and_more.py  0009_alter_certificate_organization_and_more.py  0010_order_enrollment_alter_certificate_enrollment_and_more.py  0011_remove_courseproductrelation_max_validated_orders_and_more.py  0012_producttranslation_instructions.py  0013_contractdefinition_contract_and_more.py  0014_alter_certificatedefinition_template_and_more.py  0015_alter_order_organization_and_more.py  0016_remove_ordergroup_product_and_more.py  0017_alter_ordergroup_course_product_relation.py  0018_address_is_reusable_and_more.py  0019_remove_order_unique_owner_product_not_canceled_and_more.py  0020_remove_contract_signed_on_complete_and_more.py  0021_contract_organization_signatory_and_more.py  0022_remove_contract_reference_datetime_not_both_set_and_more.py  (+122 more)
src/backend/joanie/core/mixins/: __init__.py  admin.py
src/backend/joanie/core/models/: __init__.py  accounts.py  activity_logs.py  base.py  certifications.py  contracts.py  course_wishes.py  courses.py  customers.py  events.py  notifications.py  products.py  quotes.py  site.py  wishlist.py
src/backend/joanie/core/serializers/: __init__.py  address.py  admin.py  base.py  certificate.py  certificate_definition.py  client.py  course.py  course_run.py  empty_response_serializer.py  enrollment.py  error_response_serializer.py  fields.py  model_serializers.py  order.py  order_abort_body_serializer.py  order_abort_response_serializer.py  order_create_body_serializer.py  order_invoice_query_serializer.py  organization.py  product.py  product_retrieve_query_serializer.py
src/backend/joanie/core/tasks/: __init__.py  delete_user.py  payment_schedule.py
src/backend/joanie/core/templatetags/: extra_tags.py
src/backend/joanie/core/utils/: __init__.py  api.py  batch_order.py  billing_address.py  contract.py  contract_context_processors.py  contract_definition.py  course_product_relation.py  course_run.py  discount.py  emails.py  issuers.py  jwt_tokens.py  offer.py  offering.py  order.py  organization.py  payment_schedule.py  product.py  quotes.py  sentry.py  signature.py  tokens.py  webhooks.py
src/backend/joanie/core/views/: __init__.py  certificate.py  debug.py  redirect.py
src/backend/joanie/debug/: urls.py  views.py
src/backend/joanie/demo/: defaults.py
src/backend/joanie/edx_imports/: checks.py  edx_database.py  edx_factories.py  edx_models.py  edx_mongodb.py  urls.py  utils.py
src/backend/joanie/edx_imports/api/: __init__.py
src/backend/joanie/edx_imports/tasks/: __init__.py  certificates.py  course_runs.py  enrollments.py  universities.py  users.py
src/backend/joanie/jenny/: admin.py  apps.py  models.py
src/backend/joanie/jenny/fixtures/: pricing.json
src/backend/joanie/lms_handler/: __init__.py  api.py  serializers.py  urls.py
src/backend/joanie/payment/: __init__.py  admin.py  api.py  apps.py  checks.py  enums.py  exceptions.py  factories.py  models.py  serializers.py  urls.py
src/backend/joanie/signature/: api.py  apps.py  exceptions.py  urls.py
src/backend/joanie/tests/: __init__.py  base.py  compare_image_utils.py  test_accounts.py  test_admin_course.py  test_admin_order.py  test_admin_product.py  test_api.py  test_api_address.py  test_api_base.py  test_api_certificate.py  test_api_course.py  test_api_credit_card.py  test_api_enrollment.py  test_api_order.py  test_api_product.py  test_commands_generate_certificates.py  test_commands_issue_certificates.py  test_helpers.py  test_models_certificate.py  test_models_course.py  test_models_course_run.py  test_models_enrollment.py  test_models_order.py  test_models_product.py  test_models_user.py  test_paybox_backend.py  test_products.py  test_serializers_target_course.py  testing_utils.py
(+1252 files in other folders)
