#
# Joanie package
#
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "joanie"
version = "2.17.1"
authors = [{ "name" = "Open FUN (France Université Numérique)", "email" = "fun.dev@fun-mooc.fr" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 4",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
description = "A headless ERP for education to manage course enrollment/subscription, payment and certificates delivery."
keywords = ["Django", "ERP", "education", "dashboard"]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arrow==1.3.0",
    "boto3<1.36",
    "Brotli==1.1.0",
    "celery[redis]==5.4.0",
    "cryptography==44.0.0",
    "django-admin-sortable2==2.2.4",
    "django-admin-autocomplete-filter==0.7.1",
    "django-configurations==2.5.1",
    "django-cors-headers==4.6.0",
    "django-countries==7.6.1",
    "django-filter==24.3",
    "django-fsm==3.0.0",
    "django-money==3.5.3",
    "django-object-actions==4.3.0",
    "django-parler==2.3",
    "django-redis==5.4.0",
    "django-storages==1.14.3",
    "django-viewflow==2.2.9",
    "Django<5",
    "djangorestframework-simplejwt==5.4.0",
    "djangorestframework==3.15.2",
    "drf_spectacular==0.28.0",
    "dockerflow==2024.4.2",
    "easy_thumbnails==2.10",
    "factory_boy==3.3.1",
    "gunicorn==23.0.0",
    "markdown==3.7",
    "moodlepy==0.24.1",
    "nested-multipart-parser==1.5.0",
    "obc==2.1.0",
    "payplug==1.4.0",
    "psycopg[binary]==3.2.4",
    "pydantic[email]>2",
    "PyJWT==2.10.1",
    "pyRdfa3==3.6.4",
    "python-dateutil==2.9.0.post0",
    "requests==2.32.3",
    "sentry-sdk==2.20.0",
    "stockholm==0.5.7",
    "timedelta-isoformat==0.7.0",
    "url-normalize==1.4.3",
    "WeasyPrint==63.1",
    "workalendar==17.0.0",
    "whitenoise==6.8.2",
    # edx_imports
    "pymysql==1.1.1",
    "SQLAlchemy==2.0.37",
    "hashids==1.1.0",
    "PyMongo==3.13.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/openfun/joanie/issues/new"
"Changelog" = "https://github.com/openfun/joanie/blob/main/CHANGELOG.md"
"Homepage" = "https://github.com/openfun/joanie"
"Repository" = "https://github.com/openfun/joanie"

[project.optional-dependencies]
dev = [
    "cssselect==1.2.0",
    "django-extensions==3.2.3",
    "drf-spectacular-sidecar==2024.12.1",
    "ipdb==0.13.13",
    "ipython==8.31.0",
    "lxml==5.3.0",
    "pdbpp==0.11.5",
    "pdfminer.six==20240706",
    "pyfakefs==5.7.4",
    "pylint-django==2.6.1",
    "pylint==3.3.3",
    "pytest-cov==6.0.0",
    "pytest-django==4.9.0",
    "pytest==8.3.4",
    "pytest-icdiff==0.9",
    "pytest-subtests==0.14.1",
    "pytest-xdist==3.6.1",
    "responses==0.25.6",
    "ruff==0.9.3",
    "types-requests==2.32.0.20241016",
    # edx_imports
    "sqlacodegen==3.0.0rc5",
]

[tool.setuptools]
packages = { find = { where = ["."], exclude = ["tests"] } }
zip-safe = true

[tool.distutils.bdist_wheel]
universal = true

[tool.ruff]
exclude = [
    ".git",
    ".venv",
    "build",
    "venv",
    "__pycache__",
    "*/migrations/*",
]
line-length = 88


[tool.ruff.lint]
ignore= ["DJ001"]
select = [
    "B", # flake8-bugbear
    "BLE", # flake8-blind-except
    "C4", # flake8-comprehensions
    "DJ", # flake8-django
    "I", # isort
    "PLC", # pylint-convention
    "PLE", # pylint-error
    "PLR", # pylint-refactoring
    "PLW", # pylint-warning
    "RUF100", # Ruff unused-noqa
    "RUF200", # Ruff check pyproject.toml
    "S", # flake8-bandit
    "SLF", # flake8-self
    "T20", # flake8-print
]

[tool.ruff.lint.isort]
section-order = ["future","standard-library","django","third-party","joanie","first-party","local-folder"]
sections = { joanie=["joanie"], django=["django"] }

[tool.ruff.lint.per-file-ignores]
"joanie/**/tests/*" = ["S", "SLF"]


[tool.pytest.ini_options]
addopts = [
    "-v",
    "--cov-report",
    "term-missing",
    "--pdbcls=IPython.terminal.debugger:Pdb",
    "--log-level=WARNING",
]
python_files = [
    "test_*.py",
    "tests.py",
]
