;;
;; Joanie package
;;
[metadata]
name = joanie
version = 1.1.0
description = A headless ERP for education to manage course enrollment/subscription, payment and certificates delivery.
long_description = file:README.md
long_description_content_type = text/markdown
author = Open FUN (France Université Numérique)
author_email = fun.dev@fun-mooc.fr
url = https://github.com/openfun/joanie
license = MIT
keywords = Django, ERP, education, dashboard
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 4
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
install_requires =
    Brotli==1.0.9
    PyJWT==2.7.0
    arrow==1.2.3
    boto3==1.26.151
    django-admin-sortable2==2.1.8
    django-configurations==2.4.1
    django-cors-headers==4.0.0
    django-countries==7.5.1
    django-filter==23.2
    django-fsm==2.8.1
    django-marion-howard==0.5.0
    django-marion==0.5.0
    django-money==3.1.0
    django-object-actions==4.1.0
    django-parler==2.3
    django-storages==1.13.2
    django==4.2.2
    djangorestframework-simplejwt==5.2.2
    djangorestframework==3.14.0
    dockerflow==2022.8.0
    easy_thumbnails==2.8.5
    factory_boy==3.2.1
    gunicorn==20.1.0
    nested-multipart-parser==1.5.0
    obc==0.1.0
    payplug==1.4.0
    psycopg2-binary==2.9.6
    pydantic[email]==1.10.9
    requests==2.31.0
    sentry-sdk==1.25.1
    url-normalize==1.4.3
    whitenoise==6.4.0

package_dir =
    =.
packages = find:
zip_safe = True

[options.packages.find]
exclude =
    tests

[options.extras_require]
dev =
    bandit==1.7.5
    black==23.3.0
    cssselect==1.2.0
    django-extensions==3.2.3
    drf-yasg==1.21.5
    flake8==6.0.0
    ipdb==0.13.13
    ipython==8.14.0
    isort==5.12.0
    lxml==4.9.2
    mypy==1.3.0
    pdfminer.six==20221105
    pyfakefs==5.2.2
    pylint-django==2.5.3
    pylint==2.17.4
    pytest-cov==4.1.0
    pytest-django==4.5.2
    pytest==7.3.2
    responses==0.23.1
    types-requests==2.31.0.1

[bdist_wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 99
exclude =
    .git,
    .venv,
    build,
    venv,
    __pycache__,
    */migrations/*

[isort]
known_django = django
known_joanie = joanie
include_trailing_comma = True
line_length = 88
multi_line_output = 3
use_parentheses = True
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,JOANIE,FIRSTPARTY,LOCALFOLDER
skip_glob = venv

[tool:pytest]
addopts = -v --cov-report term-missing
python_files =
    test_*.py
    tests.py

[mypy]
ignore_missing_imports = True
plugins = pydantic.mypy

[mypy-*.migrations.*]
# Django migrations should not be type checked
ignore_errors = True
