;;
;; Joanie package
;;
[metadata]
name = joanie
version = 1.1.0
description = A headless ERP for education to manage course enrollment/subscription, payment and certificates delivery.
long_description = file:README.md
long_description_content_type = text/markdown
author = Open FUN (France Université Numérique)
author_email = fun.dev@fun-mooc.fr
url = https://github.com/openfun/joanie
license = MIT
keywords = Django, ERP, education, dashboard
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 4
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
install_requires =
    Brotli==1.1.0
    PyJWT==2.8.0
    arrow==1.3.0
    boto3==1.28.64
    django-admin-sortable2==2.1.10
    django-admin-autocomplete-filter==0.7.1
    django-configurations==2.4.1
    django-cors-headers==4.3.0
    django-countries==7.5.1
    django-filter==23.3
    django-fsm==2.8.1
    django-marion-howard==0.6.0
    django-marion==0.6.0
    django-money==3.3.0
    django-object-actions==4.2.0
    django-parler==2.3
    django-storages==1.14.2
    django==4.2.6
    djangorestframework-simplejwt==5.3.0
    djangorestframework==3.14.0
    dockerflow==2022.8.0
    easy_thumbnails==2.8.5
    factory_boy==3.3.0
    gunicorn==21.2.0
    markdown==3.5
    nested-multipart-parser==1.5.0
    obc<0.2.0 # Pinned until we upgrade to Pydantic 2.0
    payplug==1.4.0
    psycopg2-binary==2.9.9
    pydantic[email]>2
    requests==2.31.0
    sentry-sdk==1.32.0
    url-normalize==1.4.3
    WeasyPrint>=59.0
    whitenoise==6.6.0

package_dir =
    =.
packages = find:
zip_safe = True

[options.packages.find]
exclude =
    tests

[options.extras_require]
dev =
    bandit==1.7.5
    black==23.9.1
    cssselect==1.2.0
    django-extensions==3.2.3
    drf-yasg==1.21.7
    flake8==6.1.0
    ipdb==0.13.13
    ipython==8.16.1
    isort==5.12.0
    lxml==4.9.3
    pdfminer.six==20221105
    pyfakefs==5.3.0
    pylint-django==2.5.3
    pylint==3.0.1
    pytest-cov==4.1.0
    pytest-django==4.5.2
    pytest==7.4.2
    responses<0.23.2 # pin until boto3 supports urllib3>=2
    types-requests==2.31.0.9

[bdist_wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 99
exclude =
    .git,
    .venv,
    build,
    venv,
    __pycache__,
    */migrations/*

[isort]
known_django = django
known_joanie = joanie
include_trailing_comma = True
line_length = 88
multi_line_output = 3
use_parentheses = True
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,JOANIE,FIRSTPARTY,LOCALFOLDER
skip_glob = venv

[tool:pytest]
addopts = -v --cov-report term-missing
python_files =
    test_*.py
    tests.py
